# pico

./: CMakeLists.txt
learning/: CMakeLists.txt  detector.txt  picolrn.c
learning/parallel/: CMakeLists.txt  genki.c  genki.h  learn_param.txt  main.c  pico-nonface.c  test1.c  test2.c  test3.c
learning/sample/: lrn.sh  preparebackground.py  preparefacesamplesfromgenki.py  tohexarray.py
rnt/: picornt.c  picornt.h
rnt/sample/: CMakeLists.txt  NDK_all.sh  build_NDK_cmake.sh  build_x86_cmake.sh  facefinder.c  main.c  makefile  sample.c  v4l2.c
runtime/: picort.c
runtime/pico-bin/C/: CMakeLists.txt  FindV4L2.cmake  cam-play.c  pico-bin.c  pulse-v4l2.c  v4l2-cap.c
runtime/pico-bin/C/vs/: pico-runtime-static.vcxproj.filters
runtime/samples/C/: CMakeLists.txt  sample.c
runtime/samples/C/pico-runtime/: pico-runtime-static.vcxproj
