# ----------------------------------------------------------------------------
# Process subdirectories
# ----------------------------------------------------------------------------
add_subdirectory(runtime/pico-bin/C)
add_subdirectory(runtime/samples/C)
add_subdirectory(learning)
add_subdirectory(learning/parallel)
